@@ -99,17 +99,19 @@ public class CartServiceImpl implements CartService {
         if (carts.isEmpty()) {
             throw new ApiException("Cart is empty");
         }
-        List<CartDTO> cartDTOs = carts.stream().map(cart -> {
+
+        return carts.stream().map(cart -> {
             CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
             List<ProductDTO> products = cart.getCartItems().stream()
-                    .map(cartItem -> modelMapper.map(cartItem.getProduct(), ProductDTO.class)
-                    ).toList();
+                    .map(cartItem -> {
+                        ProductDTO productDTO = modelMapper.map(cartItem.getProduct(), ProductDTO.class);
+                        productDTO.setQuantity(cartItem.getQuantity());
+                        return productDTO;
+                    }).collect(Collectors.toList());
 
             cartDTO.setProducts(products);
             return cartDTO;
         }).collect(Collectors.toList());
-
-        return cartDTOs;
     }
 
     @Override
@@ -239,7 +241,7 @@ public class CartServiceImpl implements CartService {
         cart.setTotalPrice(cartPrice
                 + (cartItem.getProductPrice() * cartItem.getQuantity()));
 
-        cartItem = cartItemRepository.save(cartItem);
+        cartItemRepository.save(cartItem);
     }
     private Cart createCart() {
         Cart userCart = cartRepository.findCartByEmail(authUtil.loggedInEmail());
